--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Chrome 실행",
             "type": "chrome",
             "request": "launch",
-            "name": "localhost에 대해 Chrome 시작",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceFolder}"
-        }
+            "file": "${file}"
+          }
     ]
 }
